<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello World</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lblMyName">"My Name is: "</string>
    <string name="lblBtnClick">Click Me!</string>
    <string name="lblYourName">Your Name</string>
    <string name="title_activity_calcu">CalcuActivity</string>
    <string name="lblNewAct">Cameree Activity</string>
    <string name="title_activity_cam">CamActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="btnTakePic">Take Picture!</string>
    <string name="lblAge">My Age is:</string>
    <string name="title_activity_threaded_main">ThreadedMainActivity</string>

</resources>
