<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helloworld.HelloMainActivity" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/frameLayout1"
        android:layout_below="@+id/frameLayout1"
        android:layout_marginTop="35dp"
        android:text="@string/lblMyName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtFldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/frameLayout1"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/lblYourName" />

    <TextView
        android:id="@+id/txtVwHello1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStartCam"
        android:layout_marginTop="31dp"
        android:layout_toRightOf="@+id/btnStartCam"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/btnStartCam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtFldName"
        android:layout_below="@+id/txtFldName"
        android:layout_marginTop="75dp"
        android:onClick="fnGreet"
        android:text="@string/lblBtnClick" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnStartCam"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="Your Age..." />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnStartCam"
        android:layout_below="@+id/txtFldName"
        android:layout_marginTop="10dp"
        android:text="@string/lblAge"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnStartCam"
        android:layout_toRightOf="@+id/edtAge"
        android:onClick="fnThreadActivity"
        android:text="@string/lblNewAct" />

</RelativeLayout>